syntax = "proto3";

message Message {
    string message = 1;
}

message MessageRequest {
    string message = 1;
}

message MessageResponse {
    string message = 1;
}

service MessageService {
    rpc Message(MessageRequest) returns (MessageResponse);
}